@@ -1,1 +1,3 @@
 Use Launch4j
+
+JDK 11 generate JRE: `jlink.exe --module-path jmods --add-modules java.desktop --output jre`
